--- a/site/homepage-1.html
+++ b/site/homepage-1.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <title>Ratmovie </title>
+        <title>RAMOVIE - Le cinéma des rats</title>
         <!-- Bootstrap -->
         <link href="./bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
         <!-- Animate.css -->
@@ -44,98 +44,14 @@
                     </button>
                     <div class="navbar-collapse">
                         <ul class="navbar-nav">
-                            <li class="nav-item nav-item-arrow-down nav-hover-show-sub">
-                                <a class="nav-link" href="#">Home</a>
-                                <div class="nav-arrow"><i class="fas fa-chevron-down"></i></div>
-                                <ul class="collapse nav">
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="homepage-1.html">Homepage 1</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="homepage-2.html">Homepage 2</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="homepage-3.html">Homepage 3</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="nav-item nav-item-arrow-down nav-hover-show-sub">
-                                <a class="nav-link" href="#" data-role="nav-toggler">Pages</a>
-                                <div class="nav-arrow"><i class="fas fa-chevron-down"></i></div>
-                                <ul class="collapse nav">
-                                    <li class="nav-item nav-item-arrow-down nav-hover-show-sub">
-                                        <a class="nav-link" href="#" data-role="nav-toggler">Films</a>
-                                        <div class="nav-arrow"><i class="fas fa-chevron-down"></i></div>
-                                        <ul class="collapse nav">
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="movies-blocks.html">Blocks - No Sidebar</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="movies-blocks-sidebar-right.html">Blocks - Sidebar right</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="movies-posters.html">Posters - No Sidebar</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="movies-posters-sidebar-right.html">Posters - Sidebar right</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="movies-list.html">List </a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="movie-info-sidebar-right.html">Info Film</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="gallery.html">Gallery</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="news-blocks-sidebar-right.html">Nouveaux</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="article-sidebar-right.html">Article</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="about-us.html">A propos de nous</a>
-                                    </li>
-                                    <li class="nav-item nav-item-arrow-down nav-hover-show-sub">
-                                        <a class="nav-link" href="#" data-role="nav-toggler">Espace utilisateurs</a>
-                                        <div class="nav-arrow"><i class="fas fa-chevron-down"></i></div>
-                                        <ul class="collapse nav">
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="sign-in.html">Connexion</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="sign-up.html">Inscritpion</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li class="nav-item nav-item-arrow-down nav-hover-show-sub">
-                                        <a class="nav-link" href="#" data-role="nav-toggler">Status pages</a>
-                                        <div class="nav-arrow"><i class="fas fa-chevron-down"></i></div>
-                                        <ul class="collapse nav">
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="under-construction.html">Under construction</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="coming-soon.html">En cours..</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="404-1.html">404 - 1</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="404-2.html">404 - 2</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
+                            <li class="nav-item">
+                                <a class="nav-link" href="homepage-1.html">Accueil</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="movies-blocks.html">Films</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contact-us.html">Contacter nous</a>
+                                <a class="nav-link" href="contact-us.html">Mon compte</a>
                             </li>
                         </ul>
                         <div class="navbar-extra">
