resolution de bug en php

--- a/site/register.html
+++ b/site/register.html
@@ -23,7 +23,7 @@
 							<form action="inscription_ramovie.php" method="POST" class="needs-validation" novalidate="" autocomplete="off">
 								<div class="mb-3">
 									<label class="mb-2 text-muted" for="name">Nom</label>
-									<input id="name" type="text" class="form-control" name="name" value="" required autofocus>
+									<input id="name" type="text" class="form-control" name="nom" value="" required autofocus>
 									<div class="invalid-feedback">
 										Nom requis
 									</div>
@@ -31,7 +31,7 @@
 
 								<div class="mb-3">
 									<label class="mb-2 text-muted" for="name">Prénom</label>
-									<input id="name" type="text" class="form-control" name="name" value="" required autofocus>
+									<input id="name" type="text" class="form-control" name="prenom" value="" required autofocus>
 									<div class="invalid-feedback">
 										Prénom requis
 									</div>
@@ -47,7 +47,7 @@
 
 								<div class="mb-3">
 									<label class="mb-2 text-muted" for="password">Mot de passe</label>
-									<input id="password" type="password" class="form-control" name="password" required>
+									<input id="password" type="password" class="form-control" name="mot_de_passe" required>
 								    <div class="invalid-feedback">
 								    	Mot de passe requis
 							    	</div>
