--- a/site/indexnoco.html
+++ b/site/indexnoco.html
@@ -27,8 +27,8 @@
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="1.html">ESPACE MEMBRES</a></li>
-                          <li class="nav-item"><a class="nav-link" href="1.html">Deconexion</a></li>
+                        <li class="nav-item"><a class="nav-link" href="register.html">Inscription</a></li>
+                          <li class="nav-item"><a class="nav-link" href="1.html">Connexion</a></li>
                     </ul>
                 </div>
             </div>
