ajout d'un espace membre, ajout d'un bouton de deconnexion, cration d'une page de verification de coretion, renommage des fichier du site, partie utilisateur du site operationelle a 80%

--- a/site/login.html
+++ b/site/login.html
@@ -12,7 +12,7 @@
 			<div class="row justify-content-sm-center h-100">
 				<div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
 					<div class="text-center my-5">
-						<img src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="logo" width="100">
+						<img src="assets/img/ramov.png" alt="logo" width="200">
 					</div>
 					<div class="card shadow-lg">
 						<div class="card-body p-5">
@@ -49,7 +49,8 @@
 						</div>
 						<div class="card-footer py-3 border-0">
 							<div class="text-center">
-								Pas encore de compte ? <a href="register.html" class="text-dark">Créer ici.</a>
+								Pas encore de compte ? <a href="register.html" class="text-dark">Créer ici.</a><br>
+								Voulez-vous retourner à l'accueil ? <a href="index.php" class="text-dark">Cliquez-ici.</a>
 							</div>
 						</div>
 					</div>
