--- a/site/accueil_nc.html
+++ b/site/accueil_nc.html
@@ -56,7 +56,7 @@
                         <h2 class="text-white mt-0">Nous avons les films que vous voulez !</h2>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-4">Vous retrouverez ici la liste des films que l'on diffuse...</p>
-                        <a class="btn btn-light btn-xl" href="#services">Liste des films</a>
+                        <a class="btn btn-light btn-xl" href="listfilm.php">Liste des films</a>
                     </div>
                 </div>
             </div>
