modification de l'espace membres creation d'une template + modification du code sql de la base de donnée

--- a/site/register.html
+++ b/site/register.html
@@ -66,8 +66,8 @@
 						</div>
 						<div class="card-footer py-3 border-0">
 							<div class="text-center">
-							Vous avez déjà un compte ? <a href="1.html" class="text-dark">Connectez-vous.</a> <br>
-							Voulez-vous retourner à l'accueil ? <a href="index.html" class="text-dark">Cliquez-ici.</a>
+							Vous avez déjà un compte ? <a href="login.html" class="text-dark">Connectez-vous.</a> <br>
+							Voulez-vous retourner à l'accueil ? <a href="index.php" class="text-dark">Cliquez-ici.</a>
 							</div>
 						</div>
 					</div>
